--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         android:theme="@style/Theme.ProjetoCM"
         tools:targetApi="31">
         <activity
+            android:name=".Login"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.Login"
+            android:exported="false"
+            android:label="@string/title_activity_login" />
+        <activity
             android:name=".Registo"
             android:exported="false" />
         <activity
