--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.ProjetoCM"
         tools:targetApi="31">
         <activity
+            android:name=".DetalhesBilhete"
+            android:exported="false" />
+        <activity
+            android:name=".Bilhete"
+            android:exported="false" />
+        <activity
             android:name=".ReviewParque"
             android:exported="false" />
         <activity
