--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,11 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
+    //id 'com.android.application' version '7.2.1' apply false
+    //id 'com.android.library' version '7.2.1' apply false
+    //id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.android.application' version '7.0.3' apply false
+    id 'com.android.library' version '7.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
 
